[package]
name = "blog"
version = "0.1.0"
authors = ["paulefou <triksrimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"]}
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
comrak = "0.10"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "diesel_sqlite_pool", "serve"]